--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             text-align: center;
             max-width: 1200px;
             height: 100vh;
+            gap:  30px ;
         }
         .card{
             height: auto;
@@ -33,7 +34,27 @@
     <div class="container">
         <div class="card">
             <image>
-                <img src="image/iphone" alt="">
+                <img src="image/iphone1.jpg" alt="">
+            </image>
+            <h2>this is a card </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quasi corporis, soluta accusantium at temporibus dicta reiciendis neque excepturi quod eos maiores quam dolorem, totam sint aut unde enim id!</p>
+            <button>buy now </button>
+            
+        </div>
+
+        <div class="card">
+            <image>
+                <img src="image/iphone2.jpg" alt="">
+            </image>
+            <h2>this is a card </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quasi corporis, soluta accusantium at temporibus dicta reiciendis neque excepturi quod eos maiores quam dolorem, totam sint aut unde enim id!</p>
+            <button>buy now </button>
+            
+        </div>
+
+        <div class="card">
+            <image>
+                <img src="image/iphone3.jpg" alt="">
             </image>
             <h2>this is a card </h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quasi corporis, soluta accusantium at temporibus dicta reiciendis neque excepturi quod eos maiores quam dolorem, totam sint aut unde enim id!</p>
