--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+    
         .container{
             display: flex;
             justify-content: center;
@@ -30,7 +31,7 @@
 
     </style>
 </head>
-<body>
+<body style="background-color: aquamarine;">
     <div class="container">
         <div class="card">
             <image>
@@ -61,6 +62,27 @@
             <button>buy now </button>
             
         </div>
+        <div class="card">
+            <image>
+                <img src="image/nokia1.jpg" alt="">
+            </image>
+            <h2>this is a card </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quasi corporis, soluta accusantium at temporibus dicta reiciendis neque excepturi quod eos maiores quam dolorem, totam sint aut unde enim id!</p>
+            <button>buy now </button>
+            <div class="card">
+            <image>
+                <img src="image/nokia2.jpg" alt="">
+            </image>
+            <h2>this is a card </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quasi corporis, soluta accusantium at temporibus dicta reiciendis neque excepturi quod eos maiores quam dolorem, totam sint aut unde enim id!</p>
+            <button>buy now </button>
+            <div class="card">
+            <image>
+                <img src="image/nokia3.jpg" alt="">
+            </image>
+            <h2>this is a card </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quasi corporis, soluta accusantium at temporibus dicta reiciendis neque excepturi quod eos maiores quam dolorem, totam sint aut unde enim id!</p>
+            <button>buy now </button>
     </div>
 </body>
 </html>
