--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
             gap:  30px ;
         }
         .card{
+            display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
             height: auto;
             width: 270px;
             border-radius: 20px;
+            background-color: white;
             border: 1px solid black;
         }
         .card img {
@@ -31,7 +35,7 @@
 
     </style>
 </head>
-<body style="background-color: aquamarine;">
+<body style="background-color: rgb(66, 71, 69);">
     <div class="container">
         <div class="card">
             <image>
